# cfis-utils

./: .gitignore  AI_ASSISTANT.md  LICENCE  LoggerUtils.py  README.md  publish.py  pyproject.toml  requirements.txt
launchers/conda/: launcher.py  run.bat  run.sh
src/cfis_utils/: GitUtils.py  LoggerUtils.py  PublishUtils.py  SerialUtils.py  TerminalUtils.py  TimeUtils.py  VersionUtils.py  __init__.py  compression_utils.py  config_utils.py  field_utils.py  git_utils.py  logger_utils.py  os_utils.py  publish_utils.py  scan_utils.py  serial_utils.py  spectrum.py  spectrum_viewer.py  terminal_utils.py  tridimensional_spectrum.py  tridimensional_spectrum_viewer.py  usb_utils.py
