[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cfis_utils"
version= "v2025.04.13.02"
authors = [
  { name="Bryan Casanelli", email="bryancasanelli@gmail.com" },
]
description = "Utility classes and methods used by the CFIS laboratory."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
dependencies = [
    "colorlog",
    "numpy",
    "matplotlib",
    "toml",
    "pyserial",
]

[project.urls]
Repository = "https://github.com/CFIS-UFRO/cfis-utils"

[tool.setuptools.packages.find]
where = ["src"]