[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cfis_utils"
version= "v2025.04.29.01"
authors = [
  { name="Bryan Casanelli", email="bryancasanelli@gmail.com" },
]
description = "Utility classes and methods used by the CFIS laboratory."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
dependencies = [
    "colorlog",
    "numpy",
    "matplotlib",
    "tomlkit",
    "pyserial",
    "pyusb",
]

[project.urls]
Repository = "https://github.com/CFIS-UFRO/cfis-utils"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cfis_utils" = [
    "libusb/windows/32/*.dll",
    "libusb/windows/64/*.dll",
]